// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Progress renders correctly 1`] = `
<jest>
  <label
    class="progress-bar-label"
  >
    This is the label of progress bar
  </label>
  <div
    class="progress"
  >
    <div
      aria-label="25"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar"
      role="progressbar"
      style="width: 25%"
    >
      25%
    </div>
  </div>
</jest>
`;

exports[`OE - Progress renders correctly with bar label 1`] = `
<jest>
  <label
    class="progress-bar-label"
  >
    This is the label of progress bar
  </label>
  <div
    class="progress"
  >
    <div
      aria-label="25"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar"
      role="progressbar"
      style="width: 25%"
    >
      Loading...
    </div>
  </div>
</jest>
`;

exports[`OE - Progress renders correctly with hidden label 1`] = `
<jest>
  <label
    class="progress-bar-label"
  >
    This is the label of progress bar
  </label>
  <div
    class="progress"
  >
    <div
      aria-label="25"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar"
      role="progressbar"
      style="width: 25%"
    />
  </div>
</jest>
`;

exports[`OE - Progress renders correctly with message 1`] = `
<jest>
  <label
    class="progress-bar-label"
  >
    This is the label of progress bar
  </label>
  <div
    class="progress"
  >
    <div
      aria-label="25"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar"
      role="progressbar"
      style="width: 25%"
    >
      25%
    </div>
  </div>
  <small
    class="form-text text-muted progress-bar-message"
  >
    This is a demo message under the progress bar.
  </small>
</jest>
`;

exports[`OE - Progress renders correctly with striped and animated style 1`] = `
<jest>
  <label
    class="progress-bar-label"
  >
    This is the label of progress bar
  </label>
  <div
    class="progress"
  >
    <div
      aria-label="25"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar progress-bar-striped progress-bar-animated"
      role="progressbar"
      style="width: 25%"
    >
      25%
    </div>
  </div>
</jest>
`;

exports[`OE - Progress renders correctly with striped style 1`] = `
<jest>
  <label
    class="progress-bar-label"
  >
    This is the label of progress bar
  </label>
  <div
    class="progress"
  >
    <div
      aria-label="25"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar progress-bar-striped"
      role="progressbar"
      style="width: 25%"
    >
      25%
    </div>
  </div>
</jest>
`;

exports[`OE - Progress renders correctly with variant danger 1`] = `
<jest>
  <label
    class="progress-bar-label"
  >
    This is the label of progress bar
  </label>
  <div
    class="progress"
  >
    <div
      aria-label="25"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="progress-bar text-bg-danger"
      role="progressbar"
      style="width: 25%"
    >
      25%
    </div>
  </div>
</jest>
`;
